--- a/pages/pontao.html
+++ b/pages/pontao.html
@@ -8,33 +8,33 @@
     <link rel="shortcut icon" href="../img/img_home/favicon.png"
       type="image/x-icon">
   </head>
-  <header id="cabeçalho">
-    <div id="logo">
-      <img src="../img/img_home/brasao-do-distrito-federal.png"
-        alt="logo do Distrito Federal" width="100" height="100">
-    </div>
-
-    <input type="checkbox" id="menuFlutuanteCheckbox">
-    <label for="menuFlutuanteCheckbox" id="menu-overlay"></label>
-    <label for="menuFlutuanteCheckbox" id="menuFlutuante">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </label>
-
-    <nav id="linksHeader">
-      <a href="../index.html">Início</a>
-      <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
-        target="_blank">Contato</a>
-      <a href="nicolandia.html">Nicolândia</a>
-      <a href="planetario.html">Planetário</a>
-      <a href="zoologico.html">Zoológico</a>
-      <a href="catedral.html">Catedral</a>
-      <a href="pontao.html">Pontão</a>
-      <a href="eslplanada.html">Esplanada</a>
-    </nav>
-  </header>
   <body>
+    <header id="cabeçalho">
+      <div id="logo">
+        <img src="../img/img_home/brasao-do-distrito-federal.png"
+          alt="logo do Distrito Federal" width="100" height="100">
+      </div>
+
+      <input type="checkbox" id="menuFlutuanteCheckbox">
+      <label for="menuFlutuanteCheckbox" id="menu-overlay"></label>
+      <label for="menuFlutuanteCheckbox" id="menuFlutuante">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </label>
+
+      <nav id="linksHeader">
+        <a href="../index.html">Início</a>
+        <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
+          target="_blank">Contato</a>
+        <a href="nicolandia.html">Nicolândia</a>
+        <a href="planetario.html">Planetário</a>
+        <a href="zoologico.html">Zoológico</a>
+        <a href="catedral.html">Catedral</a>
+        <a href="pontao.html">Pontão</a>
+        <a href="eslplanada.html">Esplanada</a>
+      </nav>
+    </header>
     <div id="pontao-header">
       <h1>Pontão do Lago Sul</h1>
       <p>Um dos lugares mais charmosos e visitados de Brasília</p>
@@ -97,8 +97,7 @@
     </section>
 
     <section id="lugares" class="container">
-      <h2><br><br><br><br>Imagens do ponto turistico <br><br><br><br></h2>
-
+      <h2>Imagens do ponto turistico</h2>
       <div class="attraction">
         <img
           src="https://s2-g1.glbimg.com/2qxNMhC7dCjto8cMsX3P-t4ry28=/0x0:1700x1065/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_59edd422c0c84a879bd37670ae4f538a/internal_photos/bs/2017/F/y/ZAcBvDRIGag60sedcYzg/reveillon-prainha.jpg"
@@ -151,54 +150,55 @@
         loading="lazy">
       </iframe>
     </section>
-  </body>
-  <footer id="footer-content">
-        <div>
-            <h5>Trabalho desenvolvido por Alunos da Faculdade SENAC -
-                Brasília/DF</h5>
-            <br>
-            <div class="easterEgg">
-                <a class="footerLink" href="https://github.com/Batatiago"
-                    target="_blank">Tiago de Andrade Lima </a>
-                <img class="imgHover"
-                    src="../img/img_home/fortnite-dance-anime.gif" alt="aniaDance">
-            </div>
-            <div class="easterEgg">
-                <a class="footerLink" href="https://github.com/AndreBlackDragon"
-                    target="_blank">Andre Luis Macedo Nascimento</a>
-                <img class="imgHover"
-                    src="../img/img_home/ToothlessDancing.gif"
-                    alt="ToothlessDancing">
-            </div>
-            <div class="easterEgg">
-                <a class="footerLink" href="https://github.com/DouglasRochaTech"
-                    target="_blank">Douglas Rocha Vasco</a>
-                <img class="imgHover"
-                    src="../img/img_home/chihuahua dancando.gif"
-                    alt="chihuahuaDance">
-            </div>
-            <div class="easterEgg">
-                <a class="footerLink" href="https://github.com/FoxYokai"
-                    target="_blank">Jonas Santos Barbosa</a><img
-                    class="imgHover"
-                    src="../img/img_home/tales.gif" alt="talesDance">
-            </div>
-            <div class="easterEgg">
-                <a class="footerLink" href="https://github.com/Rapha3lmendess"
-                    target="_blank">Raphael Alves Mendes</a>
-                <img class="imgHover"
-                    src="../img/img_home/yoshi-dancing-egg-gif-unscreen.gif" alt="yoshiDance">
-            </div>
-            <div class="easterEgg">
-                <a class="footerLink" href="https://github.com/CalebeBezerra"
-                    target="_blank">Calebe Bezerra Feitosa</a>
-                <img class="imgHover"
-                    src="../img/img_home/dancing-dino.gif" alt="dancingDino">
-            </div>
+    <footer id="footer-content">
+      <div>
+        <h5>Trabalho desenvolvido por Alunos da Faculdade SENAC -
+          Brasília/DF</h5>
+        <br>
+        <div class="easterEgg">
+          <a class="footerLink" href="https://github.com/Batatiago"
+            target="_blank">Tiago de Andrade Lima </a>
+          <img class="imgHover"
+            src="../img/img_home/fortnite-dance-anime.gif" alt="aniaDance">
         </div>
-        <div>
-            <p id="rights">© 2025 DF Checkpoints. Todos os direitos
-                reservados.</p>
+        <div class="easterEgg">
+          <a class="footerLink" href="https://github.com/AndreBlackDragon"
+            target="_blank">Andre Luis Macedo Nascimento</a>
+          <img class="imgHover"
+            src="../img/img_home/ToothlessDancing.gif"
+            alt="ToothlessDancing">
         </div>
+        <div class="easterEgg">
+          <a class="footerLink" href="https://github.com/DouglasRochaTech"
+            target="_blank">Douglas Rocha Vasco</a>
+          <img class="imgHover"
+            src="../img/img_home/chihuahua dancando.gif"
+            alt="chihuahuaDance">
+        </div>
+        <div class="easterEgg">
+          <a class="footerLink" href="https://github.com/FoxYokai"
+            target="_blank">Jonas Santos Barbosa</a><img
+            class="imgHover"
+            src="../img/img_home/tales.gif" alt="talesDance">
+        </div>
+        <div class="easterEgg">
+          <a class="footerLink" href="https://github.com/Rapha3lmendess"
+            target="_blank">Raphael Alves Mendes</a>
+          <img class="imgHover"
+            src="../img/img_home/yoshi-dancing-egg-gif-unscreen.gif"
+            alt="yoshiDance">
+        </div>
+        <div class="easterEgg">
+          <a class="footerLink" href="https://github.com/CalebeBezerra"
+            target="_blank">Calebe Bezerra Feitosa</a>
+          <img class="imgHover"
+            src="../img/img_home/dancing-dino.gif" alt="dancingDino">
+        </div>
+      </div>
+      <div>
+        <p id="rights">© 2025 DF Checkpoints. Todos os direitos
+          reservados.</p>
+      </div>
     </footer>
+  </body>
 </html>
