--- a/index.html
+++ b/index.html
@@ -8,33 +8,33 @@
         <link rel="shortcut icon" href="img/img_home/favicon.png"
             type="image/x-icon">
     </head>
-    <header id="cabeçalho">
-        <div id="logo">
-            <img src="img/img_home/brasao-do-distrito-federal.png"
-                alt="logo do Distrito Federal" width="100" height="100">
-        </div>
-
-        <input type="checkbox" id="menuFlutuanteCheckbox">
-        <label for="menuFlutuanteCheckbox" id="menu-overlay"></label>
-        <label for="menuFlutuanteCheckbox" id="menuFlutuante">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </label>
-
-        <nav id="linksHeader">
-            <a href="index.html">Início</a>
-            <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
-                target="_blank">Contato</a>
-            <a href="pages/nicolandia.html">Nicolândia</a>
-            <a href="pages/planetario.html">Planetário</a>
-            <a href="pages/zoologico.html">Zoológico</a>
-            <a href="pages/catedral.html">Catedral</a>
-            <a href="pages/pontao.html">Pontão</a>
-            <a href="pages/eslplanada.html">Esplanada</a>
-        </nav>
-    </header>
     <body>
+        <header id="cabeçalho">
+            <div id="logo">
+                <img src="img/img_home/brasao-do-distrito-federal.png"
+                    alt="logo do Distrito Federal" width="100" height="100">
+            </div>
+
+            <input type="checkbox" id="menuFlutuanteCheckbox">
+            <label for="menuFlutuanteCheckbox" id="menu-overlay"></label>
+            <label for="menuFlutuanteCheckbox" id="menuFlutuante">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </label>
+
+            <nav id="linksHeader">
+                <a href="index.html">Início</a>
+                <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
+                    target="_blank">Contato</a>
+                <a href="pages/nicolandia.html">Nicolândia</a>
+                <a href="pages/planetario.html">Planetário</a>
+                <a href="pages/zoologico.html">Zoológico</a>
+                <a href="pages/catedral.html">Catedral</a>
+                <a href="pages/pontao.html">Pontão</a>
+                <a href="pages/eslplanada.html">Esplanada</a>
+            </nav>
+        </header>
         <div id="pagina-inicial">
             <h1>Bem-vindo ao DF Checkpoints</h1>
             <br>
@@ -42,54 +42,60 @@
                 alt="maspImage">
             <p>Explore os principais pontos turísticos do Distrito Federal.</p>
         </div>
+        <footer id="footer-content">
+            <div>
+                <h5>Trabalho desenvolvido por Alunos da Faculdade SENAC -
+                    Brasília/DF</h5>
+                <br>
+                <div class="easterEgg">
+                    <a class="footerLink" href="https://github.com/Batatiago"
+                        target="_blank">Tiago de Andrade Lima </a>
+                    <img class="imgHover"
+                        src="img/img_home/fortnite-dance-anime.gif"
+                        alt="aniaDance">
+                </div>
+                <div class="easterEgg">
+                    <a class="footerLink"
+                        href="https://github.com/AndreBlackDragon"
+                        target="_blank">Andre Luis Macedo Nascimento</a>
+                    <img class="imgHover"
+                        src="img/img_home/ToothlessDancing.gif"
+                        alt="ToothlessDancing">
+                </div>
+                <div class="easterEgg">
+                    <a class="footerLink"
+                        href="https://github.com/DouglasRochaTech"
+                        target="_blank">Douglas Rocha Vasco</a>
+                    <img class="imgHover"
+                        src="img/img_home/chihuahua dancando.gif"
+                        alt="chihuahuaDance">
+                </div>
+                <div class="easterEgg">
+                    <a class="footerLink" href="https://github.com/FoxYokai"
+                        target="_blank">Jonas Santos Barbosa</a><img
+                        class="imgHover"
+                        src="img/img_home/tales.gif" alt="talesDance">
+                </div>
+                <div class="easterEgg">
+                    <a class="footerLink"
+                        href="https://github.com/Rapha3lmendess"
+                        target="_blank">Raphael Alves Mendes</a>
+                    <img class="imgHover"
+                        src="img/img_home/yoshi-dancing-egg-gif-unscreen.gif"
+                        alt="yoshiDance">
+                </div>
+                <div class="easterEgg">
+                    <a class="footerLink"
+                        href="https://github.com/CalebeBezerra"
+                        target="_blank">Calebe Bezerra Feitosa</a>
+                    <img class="imgHover"
+                        src="img/img_home/dancing-dino.gif" alt="dancingDino">
+                </div>
+            </div>
+            <div>
+                <p id="rights">© 2025 DF Checkpoints. Todos os direitos
+                    reservados.</p>
+            </div>
+        </footer>
     </body>
-    <footer id="footer-content">
-        <div>
-            <h5>Trabalho desenvolvido por Alunos da Faculdade SENAC -
-                Brasília/DF</h5>
-            <br>
-            <div class="easterEgg">
-                <a class="footerLink" href="https://github.com/Batatiago"
-                    target="_blank">Tiago de Andrade Lima </a>
-                <img class="imgHover"
-                    src="img/img_home/fortnite-dance-anime.gif" alt="aniaDance">
-            </div>
-            <div class="easterEgg">
-                <a class="footerLink" href="https://github.com/AndreBlackDragon"
-                    target="_blank">Andre Luis Macedo Nascimento</a>
-                <img class="imgHover"
-                    src="img/img_home/ToothlessDancing.gif"
-                    alt="ToothlessDancing">
-            </div>
-            <div class="easterEgg">
-                <a class="footerLink" href="https://github.com/DouglasRochaTech"
-                    target="_blank">Douglas Rocha Vasco</a>
-                <img class="imgHover"
-                    src="img/img_home/chihuahua dancando.gif"
-                    alt="chihuahuaDance">
-            </div>
-            <div class="easterEgg">
-                <a class="footerLink" href="https://github.com/FoxYokai"
-                    target="_blank">Jonas Santos Barbosa</a><img
-                    class="imgHover"
-                    src="img/img_home/tales.gif" alt="talesDance">
-            </div>
-            <div class="easterEgg">
-                <a class="footerLink" href="https://github.com/Rapha3lmendess"
-                    target="_blank">Raphael Alves Mendes</a>
-                <img class="imgHover"
-                    src="img/img_home/yoshi-dancing-egg-gif-unscreen.gif" alt="yoshiDance">
-            </div>
-            <div class="easterEgg">
-                <a class="footerLink" href="https://github.com/CalebeBezerra"
-                    target="_blank">Calebe Bezerra Feitosa</a>
-                <img class="imgHover"
-                    src="img/img_home/dancing-dino.gif" alt="dancingDino">
-            </div>
-        </div>
-        <div>
-            <p id="rights">© 2025 DF Checkpoints. Todos os direitos
-                reservados.</p>
-        </div>
-    </footer>
 </html>
