--- a/pages/planetario.html
+++ b/pages/planetario.html
@@ -7,33 +7,33 @@
         <link rel="stylesheet" href="../style.css">
         <link rel="icon" type="image/x-icon" href="../img/img_home/favicon.png">
     </head>
-    <header id="cabeçalho">
-        <div id="logo">
-            <img src="../img/img_home/brasao-do-distrito-federal.png"
-                alt="logo do Distrito Federal" width="100" height="100">
-        </div>
-
-        <input type="checkbox" id="menuFlutuanteCheckbox">
-        <label for="menuFlutuanteCheckbox" id="menu-overlay"></label>
-        <label for="menuFlutuanteCheckbox" id="menuFlutuante">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </label>
-
-        <nav id="linksHeader">
-            <a href="../index.html">Início</a>
-            <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
-                target="_blank">Contato</a>
-            <a href="nicolandia.html">Nicolândia</a>
-            <a href="planetario.html">Planetário</a>
-            <a href="zoologico.html">Zoológico</a>
-            <a href="catedral.html">Catedral</a>
-            <a href="pontao.html">Pontão</a>
-            <a href="eslplanada.html">Esplanada</a>
-        </nav>
-    </header>
     <body id="planetario-body">
+        <header id="cabeçalho">
+            <div id="logo">
+                <img src="../img/img_home/brasao-do-distrito-federal.png"
+                    alt="logo do Distrito Federal" width="100" height="100">
+            </div>
+
+            <input type="checkbox" id="menuFlutuanteCheckbox">
+            <label for="menuFlutuanteCheckbox" id="menu-overlay"></label>
+            <label for="menuFlutuanteCheckbox" id="menuFlutuante">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </label>
+
+            <nav id="linksHeader">
+                <a href="../index.html">Início</a>
+                <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
+                    target="_blank">Contato</a>
+                <a href="nicolandia.html">Nicolândia</a>
+                <a href="planetario.html">Planetário</a>
+                <a href="zoologico.html">Zoológico</a>
+                <a href="catedral.html">Catedral</a>
+                <a href="pontao.html">Pontão</a>
+                <a href="eslplanada.html">Esplanada</a>
+            </nav>
+        </header>
         <h1 class="title">Planetário de Brasília</h1>
 
         <img class="imgPlanet" src="../img/img_planet/planetario1.webp"
@@ -97,54 +97,61 @@
                 loading="lazy">
             </iframe>
         </section>
+        <footer id="footer-content">
+            <div>
+                <h5>Trabalho desenvolvido por Alunos da Faculdade SENAC -
+                    Brasília/DF</h5>
+                <br>
+                <div class="easterEgg">
+                    <a class="footerLink" href="https://github.com/Batatiago"
+                        target="_blank">Tiago de Andrade Lima </a>
+                    <img class="imgHover"
+                        src="../img/img_home/fortnite-dance-anime.gif"
+                        alt="aniaDance">
+                </div>
+                <div class="easterEgg">
+                    <a class="footerLink"
+                        href="https://github.com/AndreBlackDragon"
+                        target="_blank">Andre Luis Macedo Nascimento</a>
+                    <img class="imgHover"
+                        src="../img/img_home/ToothlessDancing.gif"
+                        alt="ToothlessDancing">
+                </div>
+                <div class="easterEgg">
+                    <a class="footerLink"
+                        href="https://github.com/DouglasRochaTech"
+                        target="_blank">Douglas Rocha Vasco</a>
+                    <img class="imgHover"
+                        src="../img/img_home/chihuahua dancando.gif"
+                        alt="chihuahuaDance">
+                </div>
+                <div class="easterEgg">
+                    <a class="footerLink" href="https://github.com/FoxYokai"
+                        target="_blank">Jonas Santos Barbosa</a><img
+                        class="imgHover"
+                        src="../img/img_home/tales.gif" alt="talesDance">
+                </div>
+                <div class="easterEgg">
+                    <a class="footerLink"
+                        href="https://github.com/Rapha3lmendess"
+                        target="_blank">Raphael Alves Mendes</a>
+                    <img class="imgHover"
+                        src="../img/img_home/yoshi-dancing-egg-gif-unscreen.gif"
+                        alt="yoshiDance">
+                </div>
+                <div class="easterEgg">
+                    <a class="footerLink"
+                        href="https://github.com/CalebeBezerra"
+                        target="_blank">Calebe Bezerra Feitosa</a>
+                    <img class="imgHover"
+                        src="../img/img_home/dancing-dino.gif"
+                        alt="dancingDino">
+                </div>
+            </div>
+            <div>
+                <p id="rights">© 2025 DF Checkpoints. Todos os direitos
+                    reservados.</p>
+            </div>
+        </footer>
     </body>
-    <footer id="footer-content">
-        <div>
-            <h5>Trabalho desenvolvido por Alunos da Faculdade SENAC -
-                Brasília/DF</h5>
-            <br>
-            <div class="easterEgg">
-                <a class="footerLink" href="https://github.com/Batatiago"
-                    target="_blank">Tiago de Andrade Lima </a>
-                <img class="imgHover"
-                    src="../img/img_home/fortnite-dance-anime.gif" alt="aniaDance">
-            </div>
-            <div class="easterEgg">
-                <a class="footerLink" href="https://github.com/AndreBlackDragon"
-                    target="_blank">Andre Luis Macedo Nascimento</a>
-                <img class="imgHover"
-                    src="../img/img_home/ToothlessDancing.gif"
-                    alt="ToothlessDancing">
-            </div>
-            <div class="easterEgg">
-                <a class="footerLink" href="https://github.com/DouglasRochaTech"
-                    target="_blank">Douglas Rocha Vasco</a>
-                <img class="imgHover"
-                    src="../img/img_home/chihuahua dancando.gif"
-                    alt="chihuahuaDance">
-            </div>
-            <div class="easterEgg">
-                <a class="footerLink" href="https://github.com/FoxYokai"
-                    target="_blank">Jonas Santos Barbosa</a><img
-                    class="imgHover"
-                    src="../img/img_home/tales.gif" alt="talesDance">
-            </div>
-            <div class="easterEgg">
-                <a class="footerLink" href="https://github.com/Rapha3lmendess"
-                    target="_blank">Raphael Alves Mendes</a>
-                <img class="imgHover"
-                    src="../img/img_home/yoshi-dancing-egg-gif-unscreen.gif" alt="yoshiDance">
-            </div>
-            <div class="easterEgg">
-                <a class="footerLink" href="https://github.com/CalebeBezerra"
-                    target="_blank">Calebe Bezerra Feitosa</a>
-                <img class="imgHover"
-                    src="../img/img_home/dancing-dino.gif" alt="dancingDino">
-            </div>
-        </div>
-        <div>
-            <p id="rights">© 2025 DF Checkpoints. Todos os direitos
-                reservados.</p>
-        </div>
-    </footer>
 </html>
