--- a/pages/pontao.html
+++ b/pages/pontao.html
@@ -102,7 +102,7 @@
         <img
           src="https://s2-g1.glbimg.com/2qxNMhC7dCjto8cMsX3P-t4ry28=/0x0:1700x1065/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_59edd422c0c84a879bd37670ae4f538a/internal_photos/bs/2017/F/y/ZAcBvDRIGag60sedcYzg/reveillon-prainha.jpg"
           alt="Pontão do Lago Sul">
-        <h3>reveillon no pontão</h3>
+        <h3>Reveillon no pontão</h3>
       </div>
 
       <div class="attraction">
