altera cabecalho inicio sai da barra de links e vai para logo

--- a/pages/catedral.html
+++ b/pages/catedral.html
@@ -11,8 +11,10 @@
   <body>
     <header id="cabeçalho">
       <div id="logo">
-        <img src="../img/img_home/brasao-do-distrito-federal.png"
-          alt="logo do Distrito Federal" width="100" height="100">
+        <a href="../index.html">
+          <img src="../img/img_home/brasao-do-distrito-federal.png"
+            alt="logo do Distrito Federal" width="100" height="100">
+        </a>
       </div>
 
       <input type="checkbox" id="menuFlutuanteCheckbox">
@@ -24,7 +26,6 @@
       </label>
 
       <nav id="linksHeader">
-        <a href="../index.html">Início</a>
         <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
           target="_blank">Contato</a>
         <a href="nicolandia.html">Nicolândia</a>
