--- a/pages/zoologico.html
+++ b/pages/zoologico.html
@@ -10,31 +10,32 @@
     </head>
     <body>
         <header id="cabeçalho">
-            <div id="logo">
-                <img src="../img/img_home/brasao-do-distrito-federal.png"
-                    alt="logo do Distrito Federal" width="100" height="100">
-            </div>
+      <div id="logo">
+        <a href="../index.html">
+          <img src="../img/img_home/brasao-do-distrito-federal.png"
+          alt="logo do Distrito Federal" width="100" height="100">
+        </a>
+      </div>
 
-            <input type="checkbox" id="menuFlutuanteCheckbox">
-            <label for="menuFlutuanteCheckbox" id="menu-overlay"></label>
-            <label for="menuFlutuanteCheckbox" id="menuFlutuante">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </label>
+      <input type="checkbox" id="menuFlutuanteCheckbox">
+      <label for="menuFlutuanteCheckbox" id="menu-overlay"></label>
+      <label for="menuFlutuanteCheckbox" id="menuFlutuante">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </label>
 
-            <nav id="linksHeader">
-                <a href="../index.html">Início</a>
-                <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
-                    target="_blank">Contato</a>
-                <a href="nicolandia.html">Nicolândia</a>
-                <a href="planetario.html">Planetário</a>
-                <a href="zoologico.html">Zoológico</a>
-                <a href="catedral.html">Catedral</a>
-                <a href="pontao.html">Pontão</a>
-                <a href="eslplanada.html">Esplanada</a>
-            </nav>
-        </header>
+      <nav id="linksHeader">
+        <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
+          target="_blank">Contato</a>
+        <a href="nicolandia.html">Nicolândia</a>
+        <a href="planetario.html">Planetário</a>
+        <a href="zoologico.html">Zoológico</a>
+        <a href="catedral.html">Catedral</a>
+        <a href="pontao.html">Pontão</a>
+        <a href="eslplanada.html">Esplanada</a>
+      </nav>
+    </header>
         <h1 class="zoo-title">Zoologico de Brasília</h1>
         <div id="boxAnimals">
             <a id="linkAves" href="zoologicoPages/Aves.html">
