--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
                 <div class="easterEgg">
                     <a class="footerLink"
-                        href="https://github.com/CalebeBezerra"
+                        href="https://github.com/Dino860"
                         target="_blank">Calebe Bezerra Feitosa</a>
                     <img class="imgHover"
                         src="img/img_home/dancing-dino.gif" alt="dancingDino">
