--- a/pages/catedral.html
+++ b/pages/catedral.html
@@ -134,40 +134,48 @@
           <div class="easterEgg">
             <a class="footerLink" href="https://github.com/Batatiago"
               target="_blank">Tiago de Andrade Lima </a>
-            <img class="imgHover"
-              src="../img/img_home/fortnite-dance-anime.gif" alt="aniaDance">
+            <img
+              class="imgHover"
+              src="../img/img_home/fortnite-dance-anime.gif"
+              alt="aniaDance">
           </div>
           <div class="easterEgg">
             <a class="footerLink" href="https://github.com/AndreBlackDragon"
               target="_blank">Andre Luis Macedo Nascimento</a>
-            <img class="imgHover"
+            <img
+              class="imgHover"
               src="../img/img_home/ToothlessDancing.gif"
               alt="ToothlessDancing">
           </div>
           <div class="easterEgg">
             <a class="footerLink" href="https://github.com/DouglasRochaTech"
               target="_blank">Douglas Rocha Vasco</a>
-            <img class="imgHover"
+            <img
+              class="imgHover"
               src="../img/img_home/chihuahua dancando.gif"
               alt="chihuahuaDance">
           </div>
           <div class="easterEgg">
             <a class="footerLink" href="https://github.com/FoxYokai"
-              target="_blank">Jonas Santos Barbosa</a><img
+              target="_blank">Jonas Santos Barbosa</a>
+            <img
               class="imgHover"
-              src="../img/img_home/tales.gif" alt="talesDance">
+              src="../img/img_home/tales.gif"
+              alt="talesDance">
           </div>
           <div class="easterEgg">
             <a class="footerLink" href="https://github.com/Rapha3lmendess"
               target="_blank">Raphael Alves Mendes</a>
-            <img class="imgHover"
+            <img
+              class="imgHover"
               src="../img/img_home/yoshi-dancing-egg-gif-unscreen.gif"
               alt="yoshiDance">
           </div>
           <div class="easterEgg">
-            <a class="footerLink" href="https://github.com/CalebeBezerra"
+            <a class="footerLink" href="https://github.com/Dino860"
               target="_blank">Calebe Bezerra Feitosa</a>
-            <img class="imgHover"
+            <img
+              class="imgHover"
               src="../img/img_home/dancing-dino.gif" alt="dancingDino">
           </div>
         </div>
