--- a/pages/catedral.html
+++ b/pages/catedral.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="../img/img_catedral/favicon.png"
       type="image/x-icon">
   </head>
-  <body>
+  <body id="catedral-body">
     <header id="cabeçalho">
       <div id="logo">
         <a href="../index.html">
@@ -36,7 +36,7 @@
         <a href="eslplanada.html">Esplanada</a>
       </nav>
     </header>
-    <div id="catedralBody">
+    <div id="catedral-block-title">
       <h1 class="title">Catedral Metropolitana de Brasília</h1>
       <br>
       <img id="map-image" src="../img/img_catedral/catedral.jpg"
